<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/rc_auxiliary_background_1_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/rc_margin_size_16"
            android:paddingEnd="@dimen/rc_margin_size_16">

            <!-- 安全与隐私标题 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/rc_margin_size_10"
                android:paddingEnd="0dp"
                android:paddingBottom="@dimen/rc_margin_size_12"
                android:text="@string/seal_account_setting_security_privacy_title"
                android:textColor="?attr/rc_text_secondary_color"
                android:textSize="15sp" />

            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_friend_verification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_privacy_friend_verify"
                app:item_divider="true"
                app:item_switch="true"
                app:item_value_text_size="15sp" />

            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_search_by_st_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_privacy_search_st_account"
                app:item_divider="true"
                app:item_switch="true"
                app:item_value_text_size="15sp" />

            <!-- 隐私设置组 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_search_by_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_privacy_search_phone"
                app:item_divider="true"
                app:item_switch="true"
                app:item_value_text_size="15sp" />

            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_group_verification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_privacy_group_verify"
                app:item_divider="false"
                app:item_switch="true"
                app:item_value_text_size="15sp" />

            <!-- 新消息通知标题 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/rc_margin_size_16"
                android:paddingEnd="0dp"
                android:paddingBottom="@dimen/rc_margin_size_12"
                android:text="@string/seal_account_setting_new_message_notification_title"
                android:textColor="?attr/rc_text_secondary_color"
                android:textSize="15sp" />

            <!-- 新消息通知设置组 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_new_message_notification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_new_message_remind_new_message"
                app:item_divider="true"
                app:item_switch="true"
                app:item_value_text_size="15sp" />

            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_show_notification_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_new_message_remind_message_show_details"
                app:item_divider="true"
                app:item_switch="true"
                app:item_value_text_size="15sp" />

            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_do_not_disturb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_new_message_donot_disturb"
                app:item_divider="true"
                app:item_right_image="?attr/rc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_receive_poke_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/setting_new_message_receive_poke_message"
                app:item_divider="false"
                app:item_switch="true"
                app:item_value_text_size="15sp" />

            <!-- 分隔线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_margin_size_12" />

            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_blacklist"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_privacy_blacklist_contacts"
                app:item_divider="false"
                app:item_right_image="?attr/rc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <!-- 分隔线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_margin_size_12" />

            <!-- 通用设置组 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_chat_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_mine_set_account_chat_bg"
                app:item_divider="false"
                app:item_right_image="?attr/rc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <!-- 分隔线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_margin_size_12" />


            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_mine_set_account_clear_cache"
                app:item_divider="false"
                app:item_right_image="?attr/rc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />

            <!-- 分隔线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_margin_size_12" />

            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_clear_chat_history"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/seal_mine_set_account_clear_message_cache"
                app:item_divider="false"
                app:item_right_image="?attr/rc_right_arrow_icon_img"
                app:item_right_image_auto_mirrored="true"
                app:item_value_text_size="15sp" />


            <Button
                android:id="@+id/btn_delete_account"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="51dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rc_lively_hint_color_radius_6"
                android:text="@string/seal_mine_set_account_delete"
                android:textColor="@color/rc_white_color"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>