<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/rc_auxiliary_background_1_color"
    android:orientation="vertical">

    <io.rong.imkit.usermanage.component.HeadComponent
        android:id="@+id/head_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:head_right_text="@string/seal_gender_save"
        app:head_title_text="@string/seal_theme_setting_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/rc_margin_size_16"
            android:paddingEnd="@dimen/rc_margin_size_16"
            android:paddingTop="@dimen/rc_margin_size_16"
            android:paddingBottom="@dimen/rc_margin_size_16">

            <LinearLayout
                android:id="@+id/layout_theme_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <cn.rongcloud.im.ui.view.SettingItemView
                    android:id="@+id/siv_theme_origin_light"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rc_title_bar_height"
                    app:item_content="@string/seal_theme_origin_light"
                    app:item_divider="true"
                    app:item_selected_image="?attr/rc_group_manage_gender_cell_check_img"
                    app:item_show_selected="true" />

                <cn.rongcloud.im.ui.view.SettingItemView
                    android:id="@+id/siv_theme_lively_light"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rc_title_bar_height"
                    app:item_content="@string/seal_theme_lively"
                    app:item_selected_image="?attr/rc_group_manage_gender_cell_check_img"
                    app:item_show_selected="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_lively_mode_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rc_margin_size_12"
                android:orientation="vertical"
                android:visibility="gone">

                <cn.rongcloud.im.ui.view.SettingItemView
                    android:id="@+id/siv_theme_lively_follow_system_sub"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rc_title_bar_height"
                    app:item_content="@string/seal_theme_lively_follow_system"
                    app:item_divider="true"
                    app:item_selected_image="?attr/rc_group_manage_gender_cell_check_img"
                    app:item_show_selected="true" />

                <cn.rongcloud.im.ui.view.SettingItemView
                    android:id="@+id/siv_theme_lively_light_sub"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rc_title_bar_height"
                    app:item_content="@string/seal_theme_lively_light"
                    app:item_divider="true"
                    app:item_selected_image="?attr/rc_group_manage_gender_cell_check_img"
                    app:item_show_selected="true" />

                <cn.rongcloud.im.ui.view.SettingItemView
                    android:id="@+id/siv_theme_lively_dark_sub"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rc_title_bar_height"
                    app:item_content="@string/seal_theme_lively_dark"
                    app:item_selected_image="?attr/rc_group_manage_gender_cell_check_img"
                    app:item_show_selected="true" />
            </LinearLayout>

            <!-- 自定义主题：活力橙 -->
            <cn.rongcloud.im.ui.view.SettingItemView
                android:id="@+id/siv_theme_custom_orange"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                android:layout_marginTop="@dimen/rc_margin_size_12"
                app:item_content="@string/seal_theme_custom_orange"
                app:item_show_selected="true"
                app:item_selected_image="?attr/rc_group_manage_gender_cell_check_img"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
