<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/rc_auxiliary_background_1_color"
    android:paddingStart="@dimen/rc_margin_size_16"
    android:paddingEnd="@dimen/rc_margin_size_16"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rc_lively_common_background_radius_8"
        android:padding="8dp"
        android:src="@drawable/seal_app_logo" />

    <cn.rongcloud.im.ui.view.SettingItemView
        android:id="@+id/siv_func_introduce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:item_content="@string/seal_mine_about_function_introduce"
        app:item_right_image="?attr/rc_right_arrow_icon_img"
        app:item_divider="true" />

    <cn.rongcloud.im.ui.view.SettingItemView
        android:id="@+id/siv_rongcloud_web"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:item_content="@string/seal_mine_about_rongcloud_web"
        app:item_right_image="?attr/rc_right_arrow_icon_img"
        app:item_divider="true" />

    <cn.rongcloud.im.ui.view.SettingItemView
        android:id="@+id/siv_sealtalk_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:item_content="@string/seal_mine_about_seal_talk_version"
        app:item_divider="true"
        app:item_tag_image="@drawable/seal_ic_new_version"
        app:item_tag_image_height="@dimen/siv_sealtalk_version_tag_height"
        app:item_tag_image_width="@dimen/siv_sealtalk_version_tag_width" />

    <cn.rongcloud.im.ui.view.SettingItemView
        android:id="@+id/siv_sdk_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:item_content="@string/seal_mine_about_sdk_version" />

    <cn.rongcloud.im.ui.view.SettingItemView
        android:id="@+id/siv_close_debug_mode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        android:visibility="gone"
        app:item_right_image="?attr/rc_right_arrow_icon_img"
        app:item_content="@string/seal_mine_about_close_debug_mode"
        app:item_divider="true" />

    <cn.rongcloud.im.ui.view.SettingItemView
        android:id="@+id/siv_debug_env"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        android:visibility="gone"
        app:item_divider="true" />

    <cn.rongcloud.im.ui.view.SettingItemView
        android:id="@+id/siv_debug_go"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:item_right_image="?attr/rc_right_arrow_icon_img"
        android:visibility="gone"
        app:item_content="@string/seal_mine_about_debug_setting"
        app:item_divider="false" />

    <TextView
        style="@style/TextStyle.Alignment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/seal_mine_about_power_margin_bottom"
        android:gravity="bottom"
        android:text="Powered by RongCloud"
        android:textColor="?attr/rc_text_secondary_color"
        android:textSize="@dimen/seal_mine_about_power_text_size" />
</LinearLayout>